tests/NormalTests/paczka1/fuzzy1/40362512.err
Error in line 6: jywcmu3Rkpp S325 2,8
Error in line 8: jywcmu3Rkpp A850 53,7
Error in line 11: ikIv S325 34,0
Error in line 7: po1D A850 1,7
Error in line 21: I3aI S309 56,4
Error in line 29: jywcmu3Rkpp S325 10,0
